# cultrue_relic_detect

./: CMakeLists.txt  README.md  dbutils.h  main.cpp
db/: app.db
filters/: filters.h  filters.py  templates_filter.h  templates_filters.h  tmp_router_filter.h
resource/static/css/: all.min.css  elzero.css
resource/templates/: index.html  item.html  login.html
routers/: detect_router.h  index_router.h  item_router.h  login_router.h  routers.h  routers.py
